feat: wizard steps, debig code

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,9 @@
         }
     </style>
     {% block extra_css %}{% endblock %}
+    
+    <!-- Add extra_head block for scripts that need to be in head -->
+    {% block extra_head %}{% endblock %}
 </head>
 
 <body>
