--- a/templates/wizard/step_3_group_selection.html
+++ b/templates/wizard/step_3_group_selection.html
@@ -19,15 +19,13 @@
         </a>
       </div>
       
-      <div class="card">
-        <div class="card-header">
-          <h6>Selected Groups</h6>
-        </div>
-        <div class="card-body">
-          <ul class="list-group" id="groups-container">
-            <!-- Groups will be dynamically populated with JavaScript -->
-          </ul>
-        </div>
+      <div id="group-sets-container">
+        <!-- Group sets will be dynamically populated with JavaScript -->
+      </div>
+      
+      <!-- Groups container - groups will be displayed as cards instead of list items -->
+      <div id="groups-container" class="mt-4">
+        <!-- Groups will be dynamically populated with cards in JavaScript -->
       </div>
     </div>
   </div>
