--- a/templates/wizard/wizard_base.html
+++ b/templates/wizard/wizard_base.html
@@ -6,6 +6,8 @@
   {{ block.super }}
   <!-- demo overrides -->
   <link href="{% static 'css/demo.css' %}" rel="stylesheet" />
+  <!-- Custom wizard styles -->
+  <link href="{% static 'css/wizard.css' %}" rel="stylesheet" />
   <style>
     /* Additional styles for the moving tab */
     .moving-tab {
