style: Apply bootstrap5 to base and canvas forms

--- a/static/css/components/utilities.css
+++ b/static/css/components/utilities.css
@@ -312,6 +312,7 @@
 /* Visibility utilities */
 .visible { visibility: visible !important; }
 .invisible { visibility: hidden !important; }
+.initially-hidden { display: none !important; }
 
 /* Z-index utilities */
 .z-n1 { z-index: -1 !important; }
